# gedcom5

./: .gitignore  LICENSE.txt  README.md  makefile  pyproject.toml  requirements.txt
gedcom5/: __init__.py  gedcom.py  parser.py  tag.py
tests/: structures.py  test_anul.py  test_date.py  test_example.py  test_failures.py  test_fam.py  test_gedcom5.py  test_head.py  test_indi.py  test_name.py  test_note.py  test_obje.py  test_repo.py  test_sour.py  test_subm.py  test_subn.py
